<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="#0081AF" >

        <Button
            android:id="@+id/login_reback_btn"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_back"
            android:onClick="login_back"
            android:text="返回"
            android:textColor="#fff"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="登录"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:text="用户名：" />

        <EditText
            android:id="@+id/regester_user_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/login_editbox"
            android:singleLine="true"
            android:textColor="#000"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:text="密    码：" />

        <EditText
            android:id="@+id/regester_passwd_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/login_editbox"
            android:password="true"
            android:singleLine="true"
            android:textColor="#000"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:text="@string/regester_passwdText2" />

        <EditText
            android:id="@+id/regester_passwd2_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/login_editbox"
            android:password="true"
            android:singleLine="true"
            android:textColor="#000"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:text="@string/regester_email" />

        <EditText
            android:id="@+id/regester_email_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/login_editbox"
            android:password="true"
            android:singleLine="true"
            android:textColor="#000"
            android:textSize="15sp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/regester_tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal" >

        <TableRow>

            <Button
                android:id="@+id/regester_btn"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/btn_style_white"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/login_regester" />

            <Button
                android:id="@+id/reset_btn"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/btn_style_white"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/reset_btn" />
        </TableRow>
    </TableLayout>

</LinearLayout>